--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,16 @@
 
 export("%>%")
 export(deploy)
+import(clmodels)
 importFrom(clhelpers,adj_path)
+importFrom(clhelpers,append_log)
 importFrom(data.table,':=')
 importFrom(lubridate,hour)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,'%$%')
 importFrom(magrittr,'%<>%')
 importFrom(magrittr,'%T>%')
+importFrom(updateprices,update_prices)
+importFrom(xts,xts)
+importFrom(zoo,index)
