--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,'%$%')
 importFrom(magrittr,'%<>%')
 importFrom(magrittr,'%T>%')
+importFrom(parallel,mclapply)
 importFrom(updateprices,update_prices)
 importFrom(xts,xts)
 importFrom(zoo,index)
