--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(magrittr,'%$%')
 importFrom(magrittr,'%<>%')
 importFrom(magrittr,'%T>%')
 importFrom(parallel,mclapply)
+importFrom(stats,na.omit)
 importFrom(updateprices,update_prices)
 importFrom(xts,xts)
 importFrom(zoo,index)
